# DNShit

./: Cargo.toml  README.md  settings.ini
src/: dns.rs  lib.rs  main.rs  prelude.rs
