[package]
name = "dnshit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.1.0"
rand = "0.8.5"
smallvec = "1.13.2"
thiserror = "2.0.7"
tokio = { version = "1", features = ["full"] }
